Moved inline styles into stylesheet

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         </header>
         <main>
-            <p><img src="stagephoto.jpg" style="position: absolute; top:0px; left: 400px; width:700px;height:700;"></p>
+            <p><img src="stagephoto.jpg" class="main-image"></p>
             <br>
             <br>
             <br>
