Introduced hero section

--- a/index.html
+++ b/index.html
@@ -9,33 +9,24 @@
 
         </header>
         <main>
-            <p><img src="stagephoto.jpg" class="main-image"></p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h1><em>Samantha Jones <br>Curriculum Vitae</em></h1>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <hr>
-            <h3 class="title">Education</h3>
-            <p>Master of Engineering Management, Canterbury University, 2015</p>
-            <p>Master of International Security, Massey Univeristy, 2014</p>
-            <p>Bachelor of Commerce, Canterbury University, 2010 </p>
+            <section class="hero">
+                <div class="background-image"></div>
+                <div class="content-wrapper">
+                    <h1><em>Samantha Jones <br>Curriculum Vitae</em></h1>
+                    <div class="button-wrapper">
+                        <a class="button" href="#employment">Employment</a>
+                        <a class="button" href="#education">Education</a>
+                        <a class="button" href="#references">References</a>
+                        <a class="button" href="#contact">Contact</a>
+                    </div>
+                </div>
+            </section>
+            <section id="education">
+                <h3 class="title">Education</h3>
+                <p>Master of Engineering Management, Canterbury University, 2015</p>
+                <p>Master of International Security, Massey Univeristy, 2014</p>
+                <p>Bachelor of Commerce, Canterbury University, 2010 </p>
+            </section>
 
             <h3>Work Expereince</h3>
             <p><b>Little Yellow Bird</b><p>
